--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "rucker"
-version = "0.1.0"
 authors = ["kaito2 <kaito.iwatsuki@nislab.doshisha.ac.jp>"]
 edition = "2018"
+name = "rucker"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+network_bridge = "0.1.1"
